--- a/demo/euacho-onibus/demo/index.html
+++ b/demo/euacho-onibus/demo/index.html
@@ -11,7 +11,11 @@
 </head>
 
 <body unresolved>
-
+    <style>
+        body{
+            margin:0;
+        }
+    </style>
     <!--<p>An example of <code>&lt;euacho-onibus&gt;</code>:</p>-->
 
     <euacho-onibus>
